--- a/index.html
+++ b/index.html
@@ -378,14 +378,10 @@
         </div>
         <div class="board__done hidden">
             <div class="board__done__text">
-                <p>Thanks for playing! Dont hesitate to check my work on social media; I also stream some web design on
-                    my Twitch channel *atm working on a 3D project* come say hi !</p>
+                <p>Thanks for playing! Dont forget to say hello!</p>
             </div>
             <div class="board__done__social">
-                <a href='https://twitter.com/cathydolle' target="_blank">twitter</a>
-                <a href='https://dribbble.com/CathyDolle' target="_blank">dribbble</a>
-                <a href='https://www.twitch.tv/katy_v4' target="_blank">twitch</a>
-                <a href='https://github.com/CathyDolle' target="_blank">github</a>
+                <a href='https://twitter.com/0xdor' target="_blank">twitter</a>
             </div>
         </div>
         <div class="board__footer">
