--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <h1 class="board__title flavor hidden">choose your flavor</h1>
             <h1 class="board__title topping hidden">choose your topping</h1>
             <h1 class="board__title straw hidden">choose your straw</h1>
-            <h1 class="board__title done hidden">You're done !</h1>
+            <h1 class="board__title done hidden">You're done ! Enjoy Your Tea :)</h1>
         </div>
         <!-- WELCOME -->
         <div class="board__welcome">
